--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@
 %     EXPERIENCE	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\section{objective}
-%To obtain a position of the MS student at the The Universit{\'e} Grenoble Alpes
+%To obtain a position of the MS student at Grenoble Alps University
 \section{education}
 \runsubsection{Moscow Institute of Physics and Technology}\\
 \begin{tightemize}
@@ -126,17 +126,17 @@
 \descript{Bachelor of sciences}\\
 Department of Control and Applied Mathematics\\
 Specialization: Applied Mathematics and Physics\\
-Thesis: Stochastic coordinate descent method with arbitrary sampling\\
+Thesis: <<Stochastic coordinate descent method with arbitrary sampling>>\\
 \normalsize Supervisor: Peter Richt{\'a}rik\\
-\location{Sep 2014 -- Aug 2019}
-\location{GPA: 4.69/5}
+\location{September 2014 -- August 2019}
+\location{GPA: 7.55/10}
 \vspace{0.1em}
 \item
 \descript{Master of sciences}\\
 Department of Control and Applied Mathematics\\
 Specialization: Applied Mathematics and Physics\\
-\location{GPA: 4.85/5}
-\location{Sep 2019 -- Present}
+\location{GPA: 8.79/10}
+\location{September 2019 -- Present}
 \end{tightemize}
 \vspace{0.1em}
 %\begin{tightemize}
@@ -153,7 +153,7 @@ Specialization: Applied Mathematics and Physics\\
 \section{Research interests}
 %\runsubsection{}
 \descript{}
-Randomized and distributed optimization methods for machine learning
+Optimization, Randomized Algorithms, Machine Learning
 \section{Skills}
 %\runsubsection{}
 %\location{}
@@ -172,15 +172,15 @@ Randomized and distributed optimization methods for machine learning
 %\runsubsection{Languages}
 \descript{Programming languages:} python, matlab, C/C++, T-SQL, \LaTeX\\
 \descript{Languages:} Russian (Native),  English (B2), German(A2)
-\section{Work}
+\section{Work experience}
 \vspace{0.1em}
 \runsubsection{Moscow Institute of Physics and Technology}
 \begin{tightemize}
 	\item 
-\descript{Research group of randomized algorithms for distributed optimization problems}\\
+\descript{Peter Richt{\'a}rik's research group of randomized algorithms for distributed optimization problems}\\
 %Supervisor: Peter Richt{\'a}rik\\
 Junior researcher\\
-\location{Sep 2018 – Present}
+\location{September 2018 – October 2019}
 \end{tightemize}
 \section{Internships}
 %\runsubsection{}
@@ -191,25 +191,25 @@ Junior researcher\\
 \descript{Visual Computing Center}\\
 %\normalsize Supervisor: Peter Richt{\'a}rik\\
 \location{Kingdom of Saudi Arabia}
-\location{Jan 2019 – Feb 2019}
+\location{January 2019 – February 2019}
 \end{tightemize}
 \vspace{0.1em}	   
 \section{Conferences \& Talks}
 \vspace{0.5em}
 \begin{tightemize}
 \item 
-\descript{Seminar "Modern Optimization Methods"}
+\descript{Seminar <<Modern Optimization Methods>>}\\
 \vspace{0.5em}
 \begin{tightemize}
-	\item Talk: A coordinate descent method without preprocessing\\ 
-	\location{17 December 2019}
+	\item Talk: <<A coordinate descent method without preprocessing>>\\ 
+	\location{MIPT, 17 December 2019}
 	\descript{}
-	\item Talk: Accelerated coordinate descent with arbitrary sampling\\ 
-	\location{18 March 2019}
+	\item Talk: <<Accelerated coordinate descent with arbitrary sampling>>\\ 
+	\location{MIPT, 18 March 2019}
 \end{tightemize}
 %\vspace{0.5em}
 	\item
-\descript{ Sixth International Conference on Continuous Optimization}\\
+\descript{The Sixth International Conference on Continuous Optimization}\\
 \location{Berlin, August 2019}
 %\vspace{0.5em}
 \item
@@ -217,12 +217,12 @@ Junior researcher\\
 \location{Voronovo, June 2018}
 \item
 %\vspace{0.5em}
-\descript{Computer science conference for pupils}\\
-\location{Moscow, June 2012}
+\descript{The Computer science conference for pupils}\\
+\location{National Research University of Electronic Technology, Moscow, June 2012}
 %\vspace{0.5em}
 \item
-\descript{Computer science conference for pupils}\\
-\location{Moscow, June 2011}
+\descript{The Computer science conference for pupils}\\
+\location{National Research University of Electronic Technology, Moscow, June 2011}
 \end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -238,9 +238,10 @@ Junior researcher\\
 \vspace{0.5em}
 \begin{tightemize}
 	\item
-\descript{Stochastic coordinate descent with random stepsize and arbitrary sampling}\\
+\descript{<<Stochastic coordinate descent with random stepsize and arbitrary sampling>>}\\
 \location{Being prepared to submission to the "Optimization letters"}
-\location{February 2020}
+\location{March 2020}
+\href{https://github.com/IgorSokoloff/research_papers}{[arxiv]}\\
 \end{tightemize}
 \section{TRAINING} 
 \runsubsection{samsung research russia}
@@ -254,17 +255,17 @@ Junior researcher\\
 %\vspace{1em}
 \begin{tightemize}
 \item	
-\descript{Introduction to Deep Learning}\\
-\location{January 2020 - Present}
+\descript{<<Introduction to Deep Learning>>}\\
+\location{January 2020}
 %\vspace{1.0em}
 \vspace{0.2em}
 \item
-\descript{Divide and Conquer, Sorting and Searching, and Randomized Algorithms}\\
+\descript{<<Divide and Conquer, Sorting and Searching, and Randomized Algorithms>>}\\
 \location{May 2019}
 %\vspace{1.0em}
 \vspace{0.2em}
 \item
-\descript{Mathematics and Python for data analysis}\\
+\descript{<<Mathematics and Python for data analysis>>}\\
 \location{June 2017 - July 2017}
 %\vspace{1.0em}
 \end{tightemize}
@@ -277,17 +278,26 @@ Junior researcher\\
 \begin{tightemize}
 	\item 
 \descript{Setting and repair of PC}\\
-\location{Sep 2011 – May 2012}
+\location{September 2011 – May 2012}
 %\vspace{0.4em}
 \vspace{0.2em}
 \item 
 \descript{Programming}\\
 \normalsize C/C++, WinApi, OpenGL, HTML, CSS\\
-\location{Sep 2010 – May 2013}
+\location{September 2010 – May 2013}
 %\sectionsep
 \vspace{1.0em}
 \end{tightemize}
 
+\runsubsection{Additional schools}
+\begin{tightemize}
+	\item 
+	\descript{Moscow State University mathematics school}\\
+	\location{Moscow, Sep 2012 – May 2013}
+	\item 
+	\descript{School of physics and mathematics of MIPT}\\
+	\location{Moscow, Sep 2013 – May 2014}
+\end{tightemize}
 \end{minipage} 
 \newpage
 
@@ -299,7 +309,7 @@ Junior researcher\\
 	\descript{Background and foreground estimation via Robust PCA}\\
 	\href{https://github.com/IgorSokoloff/background_and_foreground_estimation_via_rpca}{GitHub project page},
 	\href{https://nbviewer.jupyter.org/github/IgorSokoloff/background_and_foreground_estimation_via_rpca/blob/master/project.ipynb}{Source code}\\
-	\location{January 2020}
+	\location{Jan 2020}
 	\vspace{0.2em}
 	\item  
 	\descript{Benchmarking of quasi-Newton methods}\\
@@ -363,14 +373,23 @@ Developed the collision detection algorithm for two spheres and the program whic
 		\descript{Winner of the regional stage of All-Russian Olympiad on Physics}\\
 		\location{October 2013}
 		\item 
-		\descript{2nd place at The Computer science conference for pupils}\\
+		\descript{2nd place at <<The Computer science conference for pupils>>}\\
 		\location{June 2013}
 		\item 
-		\descript{2nd place at The Computer science conference for pupils}\\
+		\descript{2nd place at <<The Computer science conference for pupils>>}\\
 		\location{June 2012}
 		\item 
-		\descript{Winner of The Programming Olympiad}\\
+		\descript{Winner of <<The Programming Olympiad>>}\\
 		\location{June 2011}
 	\end{tightemize}
+
+\section{Hobbies}
+\vspace{0.5em}
+\begin{tightemize}
+	\item \descript{Jogging}
+	\item \descript{Badminton}
+	\item \descript{Snowboarding}
+	\item \descript{Travelling}
+\end{tightemize}
 \end{minipage}	
 \end{document} 
