--- a/main.tex
+++ b/main.tex
@@ -134,9 +134,11 @@ Thesis: <<Stochastic coordinate descent method with arbitrary sampling>>\\
 \item
 \descript{Master of sciences}\\
 Department of Control and Applied Mathematics\\
+Institute for Information Transmission Problems\\
 Specialization: Applied Mathematics and Physics\\
-\location{GPA: 8.79/10}
+\normalsize Supervisor: Alexander Gasnikov, Peter Richt{\'a}rik \\
 \location{September 2019 -- Present}
+\location{GPA: 8.79/10}
 \end{tightemize}
 \vspace{0.1em}
 %\begin{tightemize}
@@ -170,7 +172,7 @@ Optimization, Randomized Algorithms, Machine Learning
 %\item Layout: \LaTeX\\
 %\end{itemize}
 %\runsubsection{Languages}
-\descript{Programming languages:} python, matlab, C/C++, T-SQL, \LaTeX\\
+\descript{Programming languages:} python, matlab\\
 \descript{Languages:} Russian (Native),  English (B2), German(A2)
 \section{Work experience}
 \vspace{0.1em}
@@ -240,8 +242,8 @@ Junior researcher\\
 	\item
 \descript{<<Stochastic coordinate descent with random stepsize and arbitrary sampling>>}\\
 \location{Being prepared to submission to the "Optimization letters"}
-\location{March 2020}
-\href{https://github.com/IgorSokoloff/research_papers}{[arxiv]}\\
+%\location{March 2020}
+%\href{https://github.com/IgorSokoloff/research_papers}{[arxiv]}\\
 \end{tightemize}
 \section{TRAINING} 
 \runsubsection{samsung research russia}
