--- a/main.tex
+++ b/main.tex
@@ -136,9 +136,9 @@ Thesis: <<Stochastic coordinate descent method with arbitrary sampling>>\\
 Department of Control and Applied Mathematics\\
 Institute for Information Transmission Problems\\
 Specialization: Applied Mathematics and Physics\\
-\normalsize Supervisor: Alexander Gasnikov, Peter Richt{\'a}rik \\
+\normalsize Supervisor:  Alexander Gasnikov, Peter Richt{\'a}rik \\
 \location{September 2019 -- Present}
-\location{GPA: 8.79/10}
+\location{GPA: 8.44/10}
 \end{tightemize}
 \vspace{0.1em}
 %\begin{tightemize}
@@ -172,7 +172,7 @@ Optimization, Randomized Algorithms, Machine Learning
 %\item Layout: \LaTeX\\
 %\end{itemize}
 %\runsubsection{Languages}
-\descript{Programming languages:} python, matlab\\
+\descript{Programming languages:} C, python(numpy, pandas, scipy, mpi4py), matlab\\
 \descript{Languages:} Russian (Native),  English (B2), German(A2)
 \section{Work experience}
 \vspace{0.1em}
@@ -192,6 +192,7 @@ Junior researcher\\
 	\item 
 \descript{Visual Computing Center}\\
 %\normalsize Supervisor: Peter Richt{\'a}rik\\
+Research intern\\
 \location{Kingdom of Saudi Arabia}
 \location{January 2019 – February 2019}
 \end{tightemize}
@@ -241,7 +242,7 @@ Junior researcher\\
 \begin{tightemize}
 	\item
 \descript{<<Stochastic coordinate descent with random stepsize and arbitrary sampling>>}\\
-\location{Being prepared to submission to the "Optimization letters"}
+\location{Being prepared to submission to the arXiv}
 %\location{March 2020}
 %\href{https://github.com/IgorSokoloff/research_papers}{[arxiv]}\\
 \end{tightemize}
@@ -250,7 +251,7 @@ Junior researcher\\
 \begin{tightemize}
 	\item	
 \descript{Machine learning in business analytics}\\
-\location{July 2019}
+\location{Moscow, July 2019}
 \end{tightemize}
 \vspace{0.5em}
 \runsubsection{coursera}
@@ -258,17 +259,17 @@ Junior researcher\\
 \begin{tightemize}
 \item	
 \descript{<<Introduction to Deep Learning>>}\\
-\location{January 2020}
+\location{HSE, January 2020}
 %\vspace{1.0em}
 \vspace{0.2em}
 \item
 \descript{<<Divide and Conquer, Sorting and Searching, and Randomized Algorithms>>}\\
-\location{May 2019}
+\location{Stanford, May 2019}
 %\vspace{1.0em}
 \vspace{0.2em}
 \item
 \descript{<<Mathematics and Python for data analysis>>}\\
-\location{June 2017 - July 2017}
+\location{MIPT, Yandex, June 2017 - July 2017}
 %\vspace{1.0em}
 \end{tightemize}
 %\subsection{Coursera}
@@ -280,13 +281,13 @@ Junior researcher\\
 \begin{tightemize}
 	\item 
 \descript{Setting and repair of PC}\\
-\location{September 2011 – May 2012}
+\location{Moscow,\\ September 2011 – May 2012}
 %\vspace{0.4em}
 \vspace{0.2em}
 \item 
 \descript{Programming}\\
 \normalsize C/C++, WinApi, OpenGL, HTML, CSS\\
-\location{September 2010 – May 2013}
+\location{Moscow, \\September 2010 – May 2013}
 %\sectionsep
 \vspace{1.0em}
 \end{tightemize}
@@ -295,10 +296,10 @@ Junior researcher\\
 \begin{tightemize}
 	\item 
 	\descript{Moscow State University mathematics school}\\
-	\location{Moscow, Sep 2012 – May 2013}
+	\location{Moscow,\\ September 2012 – May 2013}
 	\item 
 	\descript{School of physics and mathematics of MIPT}\\
-	\location{Moscow, Sep 2013 – May 2014}
+	\location{Moscow,\\ September 2013 – May 2014}
 \end{tightemize}
 \end{minipage} 
 \newpage
