--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\namesection{Igor}{Sokolov}{Moscow, Russian Federation\quad|\quad+7 (916) 971 42 49 \quad|\quad \href{mailto:igor.a.sokolov@phystech.edu}{igor.a.sokolov@phystech.edu} \quad|\quad \href{https://github.com/IgorSokoloff}{GitHub account}}
+\namesection{Igor}{Sokolov}{Moscow, Russian Federation\quad|\quad+7 (916) 971 42 49 \quad|\quad \href{mailto:igor.sokolov.1@kaust.edu.sa}{igor.sokolov.1@kaust.edu.sa} \quad|\quad \href{https://github.com/IgorSokoloff}{GitHub account}}
 
 %Dolgoprudny, Moscow Oblast,\\
 %Russian Federation\\
@@ -131,14 +131,15 @@ Thesis: <<Stochastic coordinate descent method with arbitrary sampling>>\\
 \location{September 2014 -- August 2019}
 \location{GPA: 7.55/10}
 \vspace{0.1em}
+\end{tightemize}
+\runsubsection{King Abdullah University of Science and Technology}
+\begin{tightemize}
 \item
 \descript{Master of sciences}\\
-Department of Control and Applied Mathematics\\
-Institute for Information Transmission Problems\\
-Specialization: Applied Mathematics and Physics\\
-\normalsize Supervisor:  Alexander Gasnikov, Peter Richt{\'a}rik \\
-\location{September 2019 -- Present}
-\location{GPA: 8.44/10}
+Specialization: Applied Mathematics and Computational Science\\
+\normalsize Supervisor:   Peter Richt{\'a}rik \\
+\location{September 2020 -- Present}
+%\location{GPA: 8.44/10}
 \end{tightemize}
 \vspace{0.1em}
 %\begin{tightemize}
@@ -197,36 +198,7 @@ Research intern\\
 \location{January 2019 – February 2019}
 \end{tightemize}
 \vspace{0.1em}	   
-\section{Conferences \& Talks}
-\vspace{0.5em}
-\begin{tightemize}
-\item 
-\descript{Seminar <<Modern Optimization Methods>>}\\
-\vspace{0.5em}
-\begin{tightemize}
-	\item Talk: <<A coordinate descent method without preprocessing>>\\ 
-	\location{MIPT, 17 December 2019}
-	\descript{}
-	\item Talk: <<Accelerated coordinate descent with arbitrary sampling>>\\ 
-	\location{MIPT, 18 March 2019}
-\end{tightemize}
-%\vspace{0.5em}
-	\item
-\descript{The Sixth International Conference on Continuous Optimization}\\
-\location{Berlin, August 2019}
-%\vspace{0.5em}
-\item
-\descript{Traditional Math School (Machine learning and Optimization)}\\
-\location{Voronovo, June 2018}
-\item
-%\vspace{0.5em}
-\descript{The Computer science conference for pupils}\\
-\location{National Research University of Electronic Technology, Moscow, June 2012}
-%\vspace{0.5em}
-\item
-\descript{The Computer science conference for pupils}\\
-\location{National Research University of Electronic Technology, Moscow, June 2011}
-\end{tightemize}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -304,7 +276,38 @@ Research intern\\
 \end{minipage} 
 \newpage
 
-\begin{minipage}[t]{0.66\textwidth} 
+\begin{minipage}[t]{0.66\textwidth}
+\section{Conferences \& Talks}
+\vspace{0.5em}
+\begin{tightemize}
+	\item 
+	\descript{Seminar <<Modern Optimization Methods>>}\\
+	\vspace{0.5em}
+	\begin{tightemize}
+		\item Talk: <<A coordinate descent method without preprocessing>>\\ 
+		\location{MIPT, 17 December 2019}
+		\descript{}
+		\item Talk: <<Accelerated coordinate descent with arbitrary sampling>>\\ 
+		\location{MIPT, 18 March 2019}
+	\end{tightemize}
+	%\vspace{0.5em}
+	\item
+	\descript{The Sixth International Conference on Continuous Optimization}\\
+	\location{Berlin, August 2019}
+	%\vspace{0.5em}
+	\item
+	\descript{Traditional Math School (Machine learning and Optimization)}\\
+	\location{Voronovo, June 2018}
+	\item
+	%\vspace{0.5em}
+	\descript{The Computer science conference for pupils}\\
+	\location{National Research University of Electronic Technology, Moscow, June 2012}
+	%\vspace{0.5em}
+	\item
+	\descript{The Computer science conference for pupils}\\
+	\location{National Research University of Electronic Technology, Moscow, June 2011}
+\end{tightemize}	
+
 \section{Course projects}
 \vspace{0.5em}
 \begin{tightemize}
